checking new-branch function

--- a/contact_list/views/home.ejs
+++ b/contact_list/views/home.ejs
@@ -19,7 +19,7 @@
         <li>
             <p> <%= i.name %> </p>
             <p id="contact"> <%= i.phone %> </p>
-            <a href="/delete-contact/?phone=<%= i.phone %>">X</a>
+            <a href="/delete-contact/?id=<%= i._id %>">X</a>
         </li>
 
         <% } %>
