--- a/contact_list/assets/css/home.css
+++ b/contact_list/assets/css/home.css
@@ -24,7 +24,8 @@ ul {
 li {
     font-size: 20px;
     margin-top: 10px;
-    width: 450px;
+    min-width: 450px;
+    width: 95%;
     display: flex;
     justify-content: space-between;
     padding: 10px;
@@ -115,6 +116,7 @@ ul {
     max-height: 70vh;
     max-width: 98.5%;
     min-width: 600px;
+    width: 100%;
     overflow-y: scroll;
     scroll-margin: 0px;
 }
