--- a/Projects/codialTemplate/assets/CSS/home.css
+++ b/Projects/codialTemplate/assets/CSS/home.css
@@ -2,3 +2,23 @@
     margin: 0px;
     padding: 0px;
 }
+
+body {
+    background-color: #212121;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+main{
+    min-height: 85vh;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer{
+    background-color: #212121;
+}
