--- a/Projects/codialTemplate/views/_footer.ejs
+++ b/Projects/codialTemplate/views/_footer.ejs
@@ -1,1 +1,8 @@
-<h1>This is the footer part</h1>
+<link rel="stylesheet" href="/css/footer.css">
+
+<footer>
+    <li> <a href="/">Home</a> </li>
+    <li> <a href="/users/sign-up">Sign up</a> </li>
+    <li> <a href="/users/sign-in">Sign In</a> </li>
+    <li> <a href="/users/profile">Profile</a> </li>
+</footer>
