--- a/Projects/codialTemplate/views/user_sign_in.ejs
+++ b/Projects/codialTemplate/views/user_sign_in.ejs
@@ -1,10 +1,46 @@
-<h1>Sign in </h1>
+<link rel="stylesheet" href="/css/sign-up.css">
 
+<div class="card">
+    <form action="/users/create-session" method="post">
+    
+        <h1>Sign In</h1>
 
-<form action="/users/create-session" method="post">
+        <!-- <input type="submit" value="Sign In"> -->
+        
+        <div class="form-control">
+            <input type="text" name="email"  autocomplete="off" required>
+            <!-- <input type="text" name="userEmail" autocomplete="off" required> -->
+            <label for="userEmail">
+                <span style="transition-delay:0ms">U</span>
+                <span style="transition-delay:50ms">s</span>
+                <span style="transition-delay:100ms">e</span>
+                <span style="transition-delay:150ms">r</span>
+                <span style="transition-delay:200ms">E</span>
+                <span style="transition-delay:250ms">m</span>
+                <span style="transition-delay:300ms">a</span>
+                <span style="transition-delay:325ms">i</span>
+                <span style="transition-delay:350ms">l</span>
+            </label>
+        </div>
 
-    <input type="email" name="email" placeholder="your email" required>
-    <input type="password" name="password" placeholder="password" required>
-    <input type="submit" value="Sign In">
+        <div class="form-control">
+            <input type="password" name="password" autocomplete="off" required>
+            <!-- <input type="password" name="userPassword" autocomplete="off" required> -->
+            <label for="userPassword">
+                <span style="transition-delay:0ms">P</span>
+                <span style="transition-delay:50ms">a</span>
+                <span style="transition-delay:100ms">s</span>
+                <span style="transition-delay:150ms">s</span>
+                <span style="transition-delay:200ms">w</span>
+                <span style="transition-delay:250ms">o</span>
+                <span style="transition-delay:300ms">r</span>
+                <span style="transition-delay:350ms">d</span>
+            </label>
+        </div>
 
-</form>
+        <button type="submit" id="btn" >
+            <span>Submit</span>
+        </button>
+
+    </form>
+</div>
