--- a/Projects/codialTemplate/views/user_sign_up.ejs
+++ b/Projects/codialTemplate/views/user_sign_up.ejs
@@ -1,11 +1,84 @@
-<h1>Sign up</h1>
+<link rel="stylesheet" href="/css/sign-up.css">
 
-<form action="/users/create" method="post">
+<div class="card">
 
-    <input type="text" name="name"  placeholder="your name" required>
-    <input type="email" name="email" placeholder="your email" required>
-    <input type="password" name="password" placeholder="password" required>
-    <input type="password" name="confirm_password" placeholder="Confirm password" required>
-    <input type="submit" value="Sign Up">
+    <form action="/users/create" method="post">
+    
+        <!-- <input type="text" name="name"  placeholder="your name" required>
+        <input type="email" name="email" placeholder="your email" required>
+        <input type="password" name="password" placeholder="password" required>
+        <input type="password" name="confirm_password" placeholder="Confirm password" required>
+        <input type="submit" value="Sign Up"> -->
+    
+        <h1>Create Account</h1>
+        <div class="form-control">
+            <input type="text" name="name"  autocomplete="off" required>
+            <!-- <input type="value" name="userName" autocomplete="off" required> -->
+            <label for="userName">
+                <span style="transition-delay:0ms">U</span>
+                <span style="transition-delay:50ms">s</span>
+                <span style="transition-delay:100ms">e</span>
+                <span style="transition-delay:150ms">r</span>
+                <span style="transition-delay:200ms">n</span>
+                <span style="transition-delay:250ms">a</span>
+                <span style="transition-delay:300ms">m</span>
+                <span style="transition-delay:350ms">e</span>
+            </label>
+        </div>
+        <div class="form-control">
+            <input type="email" name="email" autocomplete="off" required>
+            <!-- <input type="text" name="userEmail" autocomplete="off" required> -->
+            <label for="userEmail">
+                <span style="transition-delay:0ms">U</span>
+                <span style="transition-delay:50ms">s</span>
+                <span style="transition-delay:100ms">e</span>
+                <span style="transition-delay:150ms">r</span>
+                <span style="transition-delay:200ms">E</span>
+                <span style="transition-delay:250ms">m</span>
+                <span style="transition-delay:300ms">a</span>
+                <span style="transition-delay:325ms">i</span>
+                <span style="transition-delay:350ms">l</span>
+            </label>
+        </div>
+        <div class="form-control">
+            <input type="password" name="password" autocomplete="off" required>
+            <!-- <input type="password" name="userPassword" autocomplete="off" required> -->
+            <label for="userPassword">
+                <span style="transition-delay:0ms">P</span>
+                <span style="transition-delay:50ms">a</span>
+                <span style="transition-delay:100ms">s</span>
+                <span style="transition-delay:150ms">s</span>
+                <span style="transition-delay:200ms">w</span>
+                <span style="transition-delay:250ms">o</span>
+                <span style="transition-delay:300ms">r</span>
+                <span style="transition-delay:350ms">d</span>
+            </label>
+        </div>
+        <div class="form-control">
+            <input type="password" name="confirm_password" autocomplete="off" required>
+            <!-- <input type="password" name="userConfirmPassword" autocomplete="off" required> -->
+            <label for="userPassword">
+                <span style="transition-delay:0ms">C</span>
+                <span style="transition-delay:25ms">o</span>
+                <span style="transition-delay:50ms">n</span>
+                <span style="transition-delay:75ms">f</span>
+                <span style="transition-delay:100ms">i</span>
+                <span style="transition-delay:125ms">r</span>
+                <span style="transition-delay:150ms">m</span>
+                <span style="transition-delay:175ms">P</span>
+                <span style="transition-delay:200ms">a</span>
+                <span style="transition-delay:225ms">s</span>
+                <span style="transition-delay:250ms">s</span>
+                <span style="transition-delay:275ms">w</span>
+                <span style="transition-delay:300ms">o</span>
+                <span style="transition-delay:325ms">r</span>
+                <span style="transition-delay:350ms">d</span>
+            </label>
+        </div>
+        <button type="submit" id="btn" >
+            <span>Submit</span>
+        </button>
 
-</form>
+    </form>
+
+</div>
