--- a/Projects/codialTemplate/views/home.ejs
+++ b/Projects/codialTemplate/views/home.ejs
@@ -1,2 +1,11 @@
 
 <h1>This is the main body</h1>
+
+
+<section id="feed-posts">
+    <h4>Posts</h4>
+    <form action="" id="new-post-form" method="post">
+        <textarea name="content" cols="30" rows="3" placeholder="Type here.."></textarea>
+        <input type="submit" value="Post">
+    </form>
+</section>
