form visible only to identity established people.

--- a/Projects/codialTemplate/assets/CSS/home.css
+++ b/Projects/codialTemplate/assets/CSS/home.css
@@ -15,6 +15,7 @@ main{
     min-height: 85vh;
     color: white;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
