--- a/Projects/codialTemplate/views/home.ejs
+++ b/Projects/codialTemplate/views/home.ejs
@@ -8,7 +8,7 @@
     <%  if(locals.user) { %>
 
         <form action="/posts/create" id="new-post-form" method="post">
-            <textarea name="content" cols="30" rows="3" placeholder="Type here.."></textarea>
+            <textarea name="content" cols="30" rows="3" placeholder="Type here.." required></textarea>
             <input type="submit" value="Post">
         </form>
 
@@ -18,8 +18,34 @@
         <ul>
             <% for(post of posts) { %>
             
-                <li> <%= post.content %> </li> 
+                <li> <%= post.content %> </li> <br>
                 <p> posted by : <%= post.user.name %>  </p>
+
+                <div class="post-comments">
+                    <% if(locals.user) { %>
+                        
+                        <form action="/comments/create" method="POST">
+
+                            <input type="text" name="content" placeholder="Type here to add comment..." required>
+                            <input type="hidden" name="post" value="<%= post._id %> ">
+                            <input type="submit" value="Add Comment">
+
+                        </form>
+
+                        <div class="post-comments-list">
+                            <ul id="post-comments-<%= post._id%>">
+                                <% for(comment of post.comments) { %>
+                                    
+                                    <p> <%= comment.content %>  </p>
+                                    
+                                    <small> <%= comment.user.name %>  </small>
+                                
+                                <% } %>  
+                            </ul>
+                        </div>
+
+                    <% } %> 
+                </div>
 
             <% } %>  
         </ul>
