--- a/Projects/codialTemplate/views/home.ejs
+++ b/Projects/codialTemplate/views/home.ejs
@@ -18,37 +18,20 @@
         <ul>
             <% for(post of posts) { %>
             
-                <li> <%= post.content %> </li> <br>
-                <p> posted by : <%= post.user.name %>  </p>
-
-                <div class="post-comments">
-                    <% if(locals.user) { %>
-                        
-                        <form action="/comments/create" method="POST">
-
-                            <input type="text" name="content" placeholder="Type here to add comment..." required>
-                            <input type="hidden" name="post" value="<%= post._id %> ">
-                            <input type="submit" value="Add Comment">
-
-                        </form>
-
-                        <div class="post-comments-list">
-                            <ul id="post-comments-<%= post._id%>">
-                                <% for(comment of post.comments) { %>
-                                    
-                                    <p> <%= comment.content %>  </p>
-                                    
-                                    <small> <%= comment.user.name %>  </small>
-                                
-                                <% } %>  
-                            </ul>
-                        </div>
-
-                    <% } %> 
-                </div>
+                <%- include('_post'); %> 
 
             <% } %>  
         </ul>
     </div>
 
+</section>
+
+
+<section id="user-friends">
+    <h4>Friends</h4>
+    <% for(u of all_users) {  %>
+        <p>
+            <a href="/users/profile/<%= u.id %>"><%=u.name%></a>
+        </p>
+    <% } %> 
 </section>
