--- a/Projects/codialTemplate/views/layout.ejs
+++ b/Projects/codialTemplate/views/layout.ejs
@@ -7,7 +7,6 @@
     <title> <%= title  %>  </title>
     <link rel="stylesheet" href="./css/home.css"> 
 
-    
     <%- style %>
 
 </head>
@@ -23,7 +22,9 @@
     <%- include('_footer'); %> 
     
     
+    <script src="./JS/home.js"></script>
     <%- script %>
 
 </body>
+
 </html>
