--- a/Projects/codialTemplate/views/_comment.ejs
+++ b/Projects/codialTemplate/views/_comment.ejs
@@ -1,7 +1,7 @@
-<% if( locals.user && (locals.user.id == comment.user.id) ) { %> 
-    <small>
-        <a href="/comments/destroy/<%= comment.id %>">Delete</a>
-    </small>
-<% } %> 
-<p> <%= comment.content %>  </p>  
-<small> <%= comment.user.name %>  </small>
+<p> <%= comment.content %>  </p>
+<div class="commentUser">
+    <small> <%= comment.user.name %>  </small>
+    <% if( locals.user && (locals.user.id == comment.user.id) ) { %> 
+        <small><a href="/comments/destroy/<%= comment.id %>">Delete</a></small>
+    <% } %> 
+</div>
