--- a/Projects/codialTemplate/views/_post.ejs
+++ b/Projects/codialTemplate/views/_post.ejs
@@ -1,31 +1,37 @@
-<li>
-    <p> 
+<li class="postLi"> 
+    <div class="postheader">
+        <div class="userDetails">
+            <img src="./Images/autodraw 1_17_2023-1-removebg-preview.jpg" alt="">
+            <h1> <%= post.user.name %>  </h1>
+        </div>
         <% if( locals.user && (locals.user.id == post.user.id) ) { %> 
-        <small>
-            <a href="/posts/destroy/<%= post.id %>">Delete</a>
-        </small>
+            <a class="DeletePost" href="/posts/destroy/<%= post.id %>">Delete</a>
         <% } %> 
-        <%= post.content %> <br>
-        <small>
-            posted by : <%= post.user.name %>  
-        </small>
-    </p>
+    </div>
+    
+    <div class="postContent">
+        <p> <%= post.content %> </p>
+    </div>             
+
     <div class="post-comments">
-        <% if(locals.user) { %>    
+        <% if(locals.user) { %> 
             <form action="/comments/create" method="POST">
                 <input type="text" name="content" placeholder="Type here to add comment..." required>
                 <input type="hidden" name="post" value="<%= post._id %>">
                 <input type="submit" value="Add Comment">
             </form>
+            <h5>
+                Scroll Sidewise to see more comments
+            </h5>
             <div class="post-comments-list">
-                <ul id="post-comments-<%= post._id%>">
+                <ul class="commentUl" id="post-comments-<%= post._id%>">
                     <% for(comment of post.comments) { %>    
-                        <li>
+                        <li class="commentLi">
                             <%- include('_comment') %> 
                         </li>
-                    <% } %>  
+                    <% } %> 
                 </ul>
             </div>
-        <% } %> 
+        <% } %>
     </div>
 </li>
