--- a/Projects/codialTemplate/views/home.ejs
+++ b/Projects/codialTemplate/views/home.ejs
@@ -1,21 +1,34 @@
 
-<h1>This is the main body</h1>
+<!-- <h1>This is the main body</h1> -->
 
 
-<section id="feed-posts">
-    <h4>Posts</h4>
+<section id="postSection">
 
     <%  if(locals.user) { %>
 
-        <form action="/posts/create" id="new-post-form" method="post">
-            <textarea name="content" cols="30" rows="3" placeholder="Type here.." required></textarea>
-            <input type="submit" value="Post">
-        </form>
+        <div id="postformDetails">
+                
+            <button id="postNew" class="learn-more">
+                <span class="circle" aria-hidden="true">
+                <span class="plus arrow"> <h6> + </h6> </span>
+                </span>
+                <span class="button-text">Create Post</span>
+            </button>
+
+            <div id="createpostform">
+                <form id="postForm" action="/posts/create" id="new-post-form" method="post">
+                    <textarea id="postContentInput" type="text" name="content" cols="30" rows="3" placeholder="To create post Type here.." required></textarea>
+                    <input id="postContentSubmit" type="submit" value="Post">
+                </form>
+                <input id="postContentCancel" type="text" value="cancel">
+            </div>
+        
+        </div>
 
     <% } %>
 
-    <div id="posts-list-container">
-        <ul>
+    <div id="innerMain">
+        <ul class="postUl">
             <% for(post of posts) { %>
             
                 <%- include('_post'); %> 
@@ -27,7 +40,7 @@
 </section>
 
 
-<section id="user-friends">
+<section style="display: none;" id="user-friends">
     <h4>Friends</h4>
     <% for(u of all_users) {  %>
         <p>
