--- a/Projects/codialTemplate/assets/CSS/profile.css
+++ b/Projects/codialTemplate/assets/CSS/profile.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     position: relative;
     height: 300px;
     width: 300px;
@@ -16,7 +16,6 @@
   
   .container:hover .profileCard {
     max-width: 150px;
-    /* height: 300px;  */
     -webkit-transform: translateY(-5%);
         -ms-transform: translateY(-5%);
             transform: translateY(-5%);
@@ -32,7 +31,6 @@
   }
   
   .profileCard {
-    /* max-height: 150px; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -50,7 +48,6 @@
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    /* max-height: 150px; */
     top: 0px;
   }
   
@@ -127,4 +124,4 @@
             align-items: center;
     border: 4px solid rgb(108, 35, 192);
     color: rgb(108, 35, 192);
-  }
+  } */
