--- a/Projects/codialTemplate/views/home.ejs
+++ b/Projects/codialTemplate/views/home.ejs
@@ -40,7 +40,7 @@
 </section>
 
 
-<section style="display: none;" id="user-friends">
+<section id="user-friends">
     <h4>Friends</h4>
     <% for(u of all_users) {  %>
         <p>
