--- a/Projects/codialTemplate/assets/CSS/home.css
+++ b/Projects/codialTemplate/assets/CSS/home.css
@@ -1,4 +1,4 @@
-/* *{
+*{
     margin: 0px;
     padding: 0px;
 }
@@ -55,7 +55,7 @@ small a {
     color: white;
     font-weight: 600;
     border-radius: 10px;
-} */
+}
 
 img { 
     width: 50px;
