--- a/Projects/codialTemplate/assets/CSS/footer.css
+++ b/Projects/codialTemplate/assets/CSS/footer.css
@@ -1,4 +1,4 @@
-/* footer {
+footer {
     margin-bottom: 10px;
     width: 100vw;
     height: 5vh;
@@ -18,4 +18,4 @@ a{
     color: whitesmoke;
 }
 
- */
+
