--- a/Projects/codialTemplate/assets/CSS/profile.css
+++ b/Projects/codialTemplate/assets/CSS/profile.css
@@ -1,4 +1,4 @@
-/* .container {
+.container {
     position: relative;
     height: 300px;
     width: 300px;
@@ -124,4 +124,4 @@
             align-items: center;
     border: 4px solid rgb(108, 35, 192);
     color: rgb(108, 35, 192);
-  } */
+  }
